added benchmark class